    use tabs but use spaces for formatting

------------------------------------------------------------------------------
??/??/15  richardjgowers, orbeckst
  * 0.9.2

  Enhancements

  * Can now set velocity from Atom object. (Issue 221)
  * Atom object now has force attribute for getting/setting forces (requires a
    trajectory with forces) (Issue 221)

  Changes

  * "applications" were removed from the mdanalysis source code
    repository and now exist as independent repositories under
    https://github.com/MDAnalysis/

  Fixes

03/27/15  manuel.nuno.melo, richardjgowers, comconadin
  * 0.9.1

  Enhancements

  * XYZ file format can be used without an associated topology file.
  * GAMESS output files can be read as trajectories for calculations of 
    type ``SURFACE'' and ``OPTIMIZE'' (work wit both GAMESS-US and Firefly)

  Changes

  * removed undocumented MDAnalysis.builder module

  Fixes

  * TRR coordinate access via _y and _z now works properly (Issue 224)

03/15/15  richardjgowers, tyler.je.reddy, orbeckst, e.jjordan12, zhuyi.xue,
          bala.biophysics, dotsdl, sebastien.buchoux
  * 0.9.0

  Enhancements

  * offsets for XTC and TRR trajectories now stored and retrieved
    automatically; improves init times for large trajectories (Issue 208)
  * docs now use secure mathjax CDN (Issue 182)
  * minor improvements to helanal docstring
  * Support for reading altloc records in PDB files
  * Cap proteins with ACE and NMA terminal caps
  * MOL2 read and write support
  * 2D streamplot code no longer uses deprecated matplotlib.nxutils module
  * core.distances.calc_angles and calc_torsions now accept an optional box
    argument to consider periodic boundary conditions in their calculation
    (Issue 172)
  * TopologyGroup angles and torsions methods both have a pbc flag, (default
    False) to toggle consideration of periodic boundaries
  * XYZWriter (write simple XYZ trajectories)
  * TRZReader upgrades, seeking and numframes faster