@@ -2,8 +2,10 @@
   MDAnalysis README
 =====================
 
-MDAnalysis is a Python toolkit to analyze molecular dynamics
+MDAnalysis_ is a Python toolkit to analyze molecular dynamics
 trajectories generated by CHARMM, Amber, NAMD, LAMMPS, or Gromacs.
+
+.. _MDAnalysis: http://www.mdanalysis.org
 
 It allows one to read molecular dynamics trajectories and access the
 atomic coordinates through numpy arrays. This provides a flexible and
@@ -12,19 +14,15 @@ CHARMM-style atom selection commands are implemented. Trajectories can
 also be manipulated (for instance, fit to a reference structure) and
 written out.
 
-Code and documentation are hosted at
+Code is hosted at https://github.com/MDAnalysis/mdanalysis
 
-    http://code.google.com/p/mdanalysis/
-
-The Online Documentation is available at
-
-    http://mdanalysis.googlecode.com/git/package/doc/html/index.html 
+The Online Documentation is available at http://pythonhosted.org//MDAnalysis/
 
 The html manual is also located in the docs/ directory of the source
 distribution.
 
 For installation instruction please have a look at INSTALL and the
-instructions online at http://code.google.com/p/mdanalysis/wiki/Install
+instructions online at https://github.com/MDAnalysis/mdanalysis/wiki/INSTALL
 
 
 
@@ -35,7 +33,7 @@ This software is copyright
 (c) 2005 Naveen Michaud-Agrawal
 (c) 2006 Naveen Michaud-Agrawal and Elizabeth J. Denning
 (c) 2007-2009 Naveen Michaud-Agrawal, Elizabeth J. Denning, and Oliver Beckstein
-(c) 2010-2012 Naveen Michaud-Agrawal, Elizabeth J. Denning, and Oliver Beckstein
+(c) 2010-2015 Naveen Michaud-Agrawal, Elizabeth J. Denning, and Oliver Beckstein
               and persons listed in the file AUTHORS
 unless stated otherwise in the source files.
 
@@ -72,7 +70,7 @@ When using MDAnalysis in published work, please cite
     Dynamics Simulations. J. Comput. Chem. 32 (2011), 2319--2327.
     doi: 10.1002/jcc.21787
 
-    http://mdanalysis.googlecode.com
+    http://www.mdanalysis.org
 
 Included algorithms
 -------------------
@@ -110,15 +108,9 @@ Contact
 
 Please report bugs and feature requests through the Issue Tracker at
 
-     http://code.google.com/p/mdanalysis/issues/
+     https://github.com/MDAnalysis/mdanalysis/issues
 
 Help is also available through the mailing list
 
      http://groups.google.com/group/mdnalysis-discussion
 
-For anything that cannot be resolved through the Issue Tracker or the
-mailing list please get in touch with one of the primary developers:
-
-- Naveen Michaud-Agrawal <naveen.michaudagrawal@gmail.com>
-- Elizabeth Denning <denniej0@gmail.com> 
-- Oliver Beckstein <orbeckst@gmail.com>
