@@ -1,7 +1,7 @@
 .. Summary for PyPI
 .. http://pypi.python.org/pypi/MDAnalysis/
 
-**MDAnalysis** is an object-oriented python toolkit to analyze molecular
+MDAnalysis_ is an object-oriented python toolkit to analyze molecular
 dynamics trajectories generated by CHARMM_, Gromacs_, Amber_, NAMD_, or
 LAMMPS_; it also reads other formats (e.g. PDB_ files and `XYZ format`_
 trajectories; see the `Table of Supported Coordinate Formats`_ for details). It
@@ -18,7 +18,7 @@ written out in a range of formats.
 Availability
 ============
 
-**Source code** is available from http://mdanalysis.googlecode.com under the
+**Source code** is available from http://www.mdanalysis.org under the
 `GNU Public Licence, version 2`_, together with the `online
 documentation`_. **Packages** can be downloaded from 
 
@@ -59,13 +59,13 @@ When using MDAnalysis in published work, please cite
 .. _`mdnalysis-discussion mailing list`:
    http://groups.google.com/group/mdnalysis-discussion
 .. _`online documentation`:
-   https://mdanalysis.googlecode.com/git/package/doc/html/index.html
+   http://pythonhosted.org//MDAnalysis/
 .. _`Table of Supported Coordinate Formats`:
-   https://mdanalysis.googlecode.com/git/package/doc/html/documentation_pages/coordinates/init.html#id1
+   http://pythonhosted.org//MDAnalysis/documentation_pages/coordinates/init.html#id1
 .. _`atom selection commands`:
-   https://mdanalysis.googlecode.com/git/package/doc/html/documentation_pages/selections.html#selection-commands
+   http://pythonhosted.org//MDAnalysis/documentation_pages/selections.html#selection-commands
 .. _`Selection exporters`:
-   https://mdanalysis.googlecode.com/git/package/doc/html/documentation_pages/selections_modules.html#selection-exporters
+   http://pythonhosted.org//MDAnalysis/documentation_pages/selections_modules.html#selection-exporters
 .. _NumPy: http://numpy.scipy.org
 .. _CHARMM:  http://www.charmm.org/
 .. _Amber:   http://ambermd.org/
@@ -77,8 +77,8 @@ When using MDAnalysis in published work, please cite
 .. _PDB: http://www.rcsb.org/pdb/static.do?p=file_formats/pdb/index.html
 .. _XYZ format: http://openbabel.org/wiki/XYZ_%28format%29
 
-.. _Unit Tests: http://code.google.com/p/mdanalysis/wiki/UnitTests
-.. _MDAnalysisTests: http://code.google.com/p/mdanalysis/wiki/MDAnalysisTests
+.. _Unit Tests: https://github.com/MDAnalysis/mdanalysis/wiki/UnitTests
+.. _MDAnalysisTests: https://github.com/MDAnalysis/mdanalysis/wiki/MDAnalysisTests
 
 .. _`easy_install`: http://packages.python.org/distribute/easy_install.html
 .. _`pip`: http://www.pip-installer.org/en/latest/index.html
