@@ -7,18 +7,18 @@ trajectories generated by CHARMM, Amber, NAMD, LAMMPS, or Gromacs.
 
 .. NOTE:: *This* package only contains the UnitTests and the data
           files that are used in the test suite of the MDAnalysis
-          package http://code.google.com/p/mdanalysis. They should be
+          package http://www.mdanalysis.org. They should be
           installed together with MDAnalysis.
 
-	  You can get MDAnalysis from
-	  http://code.google.com/p/mdanalysis.
+	  You can get MDAnalysis from https://github.com/MDAnalysis/mdanalysis
+	  
 
 The test files change less frequently, take up almost 20 GB of space,
 and are not needed for daily use of MDAnalysis so they are distributed
 separately from the main package.
 
 For installation instruction please have a look at INSTALL and the
-instructions online at http://code.google.com/p/mdanalysis/wiki/Install
+instructions online at https://github.com/MDAnalysis/mdanalysis/wiki/INSTALL
 
 The tests are described at http://code.google.com/p/mdanalysis/wiki/UnitTests
 
@@ -34,7 +34,7 @@ When using MDAnalysis in published work, please cite
     Dynamics Simulations. J. Comput. Chem. 32 (2011), 2319--2327.
     doi: 10.1002/jcc.21787
 
-    http://mdanalysis.googlecode.com
+    http://www.mdanalysis.org
 
 
 Contact 
@@ -42,15 +42,9 @@ Contact
 
 Please report bugs and feature requests through the Issue Tracker at
 
-     http://code.google.com/p/mdanalysis/issues/
+     https://github.com/MDAnalysis/mdanalysis/issues
 
 Help is also available through the mailing list
 
      http://groups.google.com/group/mdnalysis-discussion
 
-For anything that cannot be resolved through the Issue Tracker or the
-mailing list please get in touch with one of the primary developers:
-
-- Naveen Michaud-Agrawal <naveen.michaudagrawal@gmail.com>
-- Elizabeth Denning <denniej0@gmail.com> 
-- Oliver Beckstein <orbeckst@gmail.com>
